Work ~ correctly